tests/NormalTests/paczka1/fuzzy1/63012400.err
Error in line 5: k7jCY A683 41J2
Error in line 6: lvSSBjZ A683 85,1
Error in line 22: q3RJk6Z A683 57,7
Error in line 30: k]jCY S134 1],3
Error in line 18: IBm2J7QUUX S134 90,4
Error in line 29: q3RJk6Z S134 28,7
Error in line 7: k7jCY A683 205,6
Error in line 37: nCAi S744 70,9
Error in line 33: IBm2J7QUUX A683 37,9
